--- a/templates/discover.html
+++ b/templates/discover.html
@@ -193,7 +193,7 @@
         <p class="discover-hero-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed<br> nascetur vulputate ante amet ornare non id in egestas. Blandit a phasellus </p>
         <div class="discover-hero-btns">
           <button class="discover-hero-btn dhb-style-1 hoverable">Explore</button>
-          <button class="discover-hero-btn dhb-style-2 hoverable">Create</button>
+          <a href="/create"><button class="discover-hero-btn dhb-style-2 hoverable">Create</button></a>
         </div>
         <img src="{{url_for('static', filename='discover.svg')}}" class="discover-hero-img" alt="">
     </div>
