--- a/templates/index.html
+++ b/templates/index.html
@@ -229,63 +229,54 @@
             </div>
         </div>
         <br><br>
-        <center>
-        <div class="prints-type">
-          <div class="prints-physical prints">
-            <h1 class="prints-title">Physical Prints</h1>
-            <p class="prints-desc">Get any artwork as a physical print on a variety of different items ranging from coffee mugs to metel printed posters. Some artworks can we even be bought on canvases.</p>
-          </div>
-          <div class="prints-virtual prints">
-            <h1 class="prints-title">Virtual Prints</h1>
-            <p class="prints-desc">Get some specified artworks as a digital asset that can be stored as a NFT (Non-Fungible-Tokens). These NFTs are Unique and you will be sole owner of them.</p>
-          </div>
+        <br><br>
+        <div class="weoire">
+          <h1 class="oiew">Reimagining <br> The World of Art</h1>
+          <p class="uer">Aurorae is a powerful tool for creators across the globe which aims to provide them with a platform ot learn and sell. Every aspect of the platform has been designed in user friendly way so that newcomers do not get subordinated while preserving the essence of the website to provide the best artwork across genre to the buyer. 
+<br><br>
+            The idea was born as a platform solely dedicated for sellers but now has grown to become a site where designers and producers can access courses and can monetize their learning on our platform. </p>
         </div>
-        </center>
-        <br><br><br>
-        <div class="offering">
-          <center>
-          <h1 class="offering-head">What do we offer?</h1>
-          <div class="offerings">
-            <div class="offering o1">
-              <img src="{{url_for('static', filename='o1.svg')}}" class="offering-img" alt="">
+        <br><br>
+          <div class="whatofer">
+            <h1 class="eiorj">What do we offer?</h1>
+            <br><br>
+            <div class="wepiejr">
+              <p class="eiroeo">Platform To Learn, a marketplace</p>
             </div>
-            <div class="offering o2">
-              <img src="{{url_for('static', filename='o2.svg')}}" class="offering-img" alt="">
+            <p class="iojeioj">For the first time, a website designated for designers has been made where they can both learn and sell. <br>
+              We at Aurorae have built are our platform in a way that you users can maximise their learning exprience and utilise the learning to curate products they can earn money from</p>
+             <br><br><br> <hr style="background: white; background-color: white; color: white; border: white 2px solid;"><br><br>
+             <p class="iojeioj"><b>Want to create an amazing profile in the metaverse?</b>  <br>
+              Well fear not, we are here to offer the crytomaniacs a chance to buy 1/1 custom NFT artwork/music from the creators on our platform.
+              <br><br>
+              <b>Want your product physically?</b> <br>
+              We have a solution for that too. Not only do we offer a wide variety of artwork, we also provide a range of products to get physical version of your purchase. From Mugs to Canvases to Metallic posters sponsered by Displate</p>
+             <div class="wepiejr" style="margin-left: 20%;">
+              <p class="eiroeo" style="text-align: right; margin-right: 1em;">Buy Assets, Physically and virtually</p>
             </div>
-            <div class="offering o3">
-              <img src="{{url_for('static', filename='o3.svg')}}" class="offering-img" alt="">
+            <br><br><br> <hr style="background: white; background-color: white; color: white; border: white 2px solid;"><br><br>
+            <div class="wepiejr">
+              <p class="eiroeo">Custom <br> Artwork</p>
             </div>
-            <div class="offering o4">
-              <img src="{{url_for('static', filename='o4.svg')}}" class="offering-img" alt="">
+            <p class="iojeioj">Want to get special 1/1 work, find top artists across the globe at negotiable prices for your demand. You can request a custom artwork as per your liking that can be bought as a physical as well as a digital asset. The Request artwork feature will be volatile to the artist’s avaliability.</p>
+             <br><br><br> <hr style="background: white; background-color: white; color: white; border: white 2px solid;"><br><br>
+             <p class="iojeioj">Users have and option to buy our subscription, allowing you to avail discounts on purchase of physical/digital assets. Not only that, subscribers get access exclusive courses and blog posts. 
+<br><br>
+              Subscribers will have perks for their longetivity and will gain access to subscriber specific art auctions and member specific artwork that are 1/1 collectibles from top curators. </p>
+             <div class="wepiejr" style="margin-left: 20%;">
+              <p class="eiroeo" style="text-align: right; right: 2em;">Subscriber <br> Perks</p>
             </div>
-          </div>
-          </center>
-        </div>
-        <div class="artwork-subs">
-          <div class="artwork">
-            <img src="{{url_for('static', filename='req-artwork.svg')}}" class="as-img aw" alt="">
-            <div class="as-aw">
-              <h2 class="as-aw-head">Request Artwork</h2>
-              <button class="as-btn hoverable">Here</button>
-              <p class="as-aw-desc">You can request a custom artwork as per your liking that can be bought as a physical as well as a digital asset. The Request artwork feature will be volatile to the artist’s avaliability.</p>
+            <br><br><br> <hr style="background: white; background-color: white; color: white; border: white 2px solid;"><br><br>
+            <div class="wepiejr">
+              <p class="eiroeo">Community & Integration</p>
             </div>
-            <br><br><br>
-            <br><br><br>
-          </div>
-          <div class="artwork">
-            <div class="as-aw" style="width: 50%; margin-right: 0; margin-left: 4em;">
-              <div style="float: right; margin-right: 6em;">
-              <button class="as-btn hoverable">Here</button>
-              <h2 class="as-aw-head" style="margin-left: 1em;">Subscription</h2>
-              </div>
-              <p class="as-aw-desc" style="width: 85%">You can enroll for a monthly subscription that will grant you discounts on both physical and digital assets as well as access to some exclusive courses and blog posts. You will also get access to some member only artworks and you can be the first one to get them by getting a member ship.</p>
-            </div>
-            <img style="margin-right: 0em; margin-left: 0;" src="{{url_for('static', filename='req-artwork.svg')}}" class="as-img aw" alt="">
+            <p class="iojeioj">At Aurorae we have a community of creative minds across the globe present on different platforms. These communities are also accompanied by teachers and veteran curators for better guidance. 
+<br><br>
+              We have got integration from displate and merch companies for physical assets. Top artists also get sponsored publicity for their art and blog. </p>
+             <br><br><br> <hr style="background: white; background-color: white; color: white; border: white 2px solid;"><br><br>
+             
             
-          </div>
-        </div>
-    </div>
-    <br>
+            </div>
     <center>
       <img src="{{url_for('static', filename='logo.svg')}}" class="footer-lgoo" alt="">
     </center>
