--- a/static/style.css
+++ b/static/style.css
@@ -2462,3 +2462,93 @@ progress::-webkit-progress-value {
     color: white;
     position: fixed;
 }
+
+.skillissue{
+    background-color: #161616;
+    padding: 2em 2em 1em 2em;
+    width: 60em;
+    display: inline-block;
+    margin-left: 2em;
+    margin-top: 6em;
+    border-radius: 1em;
+}
+
+.moreskillissue{
+    width: 25em;
+    display: inline-block;
+    vertical-align: top;
+    margin-top: 6em;
+    overflow-y: auto;
+    margin-left: 2em;
+    height: 85vh;
+}
+
+.weoire{
+    margin-left: 3em;
+}
+
+.oiew{
+    font-size: 2.6em;
+    display: inline-block;
+    font-family: 'gilroy-800';
+    vertical-align: middle;
+}
+
+.uer{
+    width: 50%;
+    vertical-align: middle;
+    margin-right: 4em;
+    font-family: 'gilroy-500';
+    float: right    ;
+}
+
+.whatofer{
+    padding-top: 3em;
+    padding-bottom: 3em;
+    background: #101010;
+    padding-right: 2em;
+    position: relative;
+    padding-left: 2em;
+    left: 0;
+    margin-left: -1em;
+    margin-right: -1em;
+    right: 0;
+}
+
+.eiorj{
+    float: right;
+    font-family: 'gilroy-700';
+    margin-right: 1em;
+    color: white;
+    font-weight: 700;
+}
+
+.wepiejr{
+    width: 20em;
+    display: inline-block;
+    height: 25em;
+    vertical-align: middle;
+    background-color: none;
+    position: relative;
+    margin-left: 1em;
+    border: 5px solid #FFFFFF;
+    filter: drop-shadow(0px 4px 14px #FFFFFF);
+}
+
+.eiroeo{
+    position: absolute;
+    bottom: 1em;
+    font-size: 1.9em;
+    left: 1em;
+    font-family: 'gilroy-700';
+    color: white;
+}
+
+.iojeioj{
+    font-size: 1.3em;
+    color: white;
+    vertical-align: middle;
+    width: 50%;
+    margin-left: 2em;
+    display: inline-block;
+}
